# vox2docs

./: .gitignore  LICENSE  justfile  pyproject.toml
.claude/: CLAUDE.md
src/vox2docs/: cli.py  config.py  daemon.py  logging.py  monitor.py
src/vox2docs/processors/: __init__.py  cleanup_processor.py  processor.py  transcribe_processor.py
src/vox2docs/resources/prompts/: cleanup.j2
tests/: test_config.py
tests/test_processors/: test_cleanup_processor.py  test_rename_processor.py
vox2docs/: __init__.py  cli.py  config.py  daemon.py  logging.py  monitor.py  pipeline.py
vox2docs/processors/: __init__.py  cleanup_processor.py  rename_processor.py
