[project]
name = "vox2docs"
version = "0.0.1"
description = "A system for processing voice recordings into transcripts and insights"
authors = [{ name = "Sergey Alexandrov", email = "alexandrov88@gmail.com" }]
requires-python = "~=3.11"
license = "MIT"
dependencies = [
  "click>=8.1.8,<9",
  "watchdog>=6.0.0,<7",
  "pydantic>=2.10.5,<3",
  "pyyaml>=6.0.2,<7",
  "rich>=14.0.0,<15",
  "llm>=0.24.2",
]

[project.scripts]
vox2docs = "vox2docs.cli:main"

[project.optional-dependencies]
ollama = ["llm-ollama>=0.9.1"]
anthropic = ["llm-anthropic>=0.15.1"]

[dependency-groups]
dev = ["mypy>=1.14.1,<2", "types-pyyaml>=6.0.12.20241230,<7"]
test = ["pytest>=8.3.4,<9"]

[tool.uv]
default-groups = ["dev", "test"]

[tool.hatch.build.targets.sdist]
include = ["vox2docs"]

[tool.hatch.build.targets.wheel]
include = ["vox2docs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
