[project]
name = "vox2docs"
version = "0.0.1"
description = "A system for processing voice recordings into transcripts and insights"
authors = [{ name = "Sergey Alexandrov", email = "alexandrov88@gmail.com" }]
requires-python = ">=3.13"
license = "MIT"
dependencies = [
  "click>=8.1.8,<9",
  "watchdog>=6.0.0,<7",
  "pydantic>=2.10.5,<3",
  "pyyaml>=6.0.2,<7",
  "rich>=14.0.0,<15",
  "llm>=0.30",
  "jinja2>=3.1.6",
  "faster-whisper>=1.1.1",
  "nvidia-cublas-cu12>=12.9.2.10",
  "nvidia-cudnn-cu12>=9.21.0.82",
]

[project.scripts]
vox2docs = "vox2docs.cli:main"

[project.optional-dependencies]
ollama = ["llm-ollama>=0.9.1"]
anthropic = ["llm-anthropic>=0.24"]

[dependency-groups]
dev = ["ruff>=0.15.10", "ty>=0.0.31"]
test = ["pytest>=8.3.4,<9", "pytest-cov>=7.1.0"]

[tool.ruff]
target-version = "py313"
line-length = 88
lint.select = ["ALL"]
lint.ignore = [
  "ANN003", # kwargs argument without type annotation is okay
  "COM812", # conflicts with ruff formatter
  "D100",   # missing docstring in public module is okay
  "D104",   # missing docstring in public package is okay
  "D107",   # missing docstring in __init__ is okay when class docstring covers it
  "D203",   # conflicts with D211
  "D213",   # conflicts with D212
  "E501",
  "EM",     # noisy warnings about need to store exception messages in variables
  "ERA001", # has false positives
  "FA102",  # no need to import from __future__ to support fancy annotations
  "FIX002", # not every TODO comment needs to be fixed
  "S602",   # shell=True in subprocess is okay
  "S603",   # calling subprocess without shell=True is okay
  "S606",   # starting a process without a shell is okay
  "S607",   # partial executable path is okay for known system binaries
  "T20",    # print statements are okay
  "TD002",  # no need to mention author in TODO comments (use git blame instead)
  "TD003",  # no need to create ticket for every TODO comment
  "TRY003", # it is okay to specify long descriptive messages in exceptions
]
lint.per-file-ignores."**/test_*.py" = [
  "ANN",     # type annotations are not required in tests
  "ARG001",  # "unused" function arguments are needed to pass mock objects
  "ARG002",  # fixture arguments are used for side effects, not their value
  "D",       # docstrings are not required in tests
  "INP001",  # tests/ is an implicit namespace package
  "PLR2004", # magic values are allowed in tests
  "S101",    # asserts are allowed in tests
  "SLF001",  # accessing private members is acceptable in tests
  "TC002",   # TYPE_CHECKING imports are not required in tests
]
lint.per-file-ignores."**/conftest.py" = [
  "ANN",    # type annotations are not required in conftest
  "INP001", # tests/ is an implicit namespace package
]

[tool.ty.environment]
extra-paths = ["src"]

[tool.ty.src]
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "-v"]

[tool.coverage.run]
source = ["src/vox2docs"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.uv]
default-groups = ["dev", "test"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
